# bagman-ex

./: README.md  README.txt  bugs.txt  howto_rebuild.txt  meson.build
assets/amiga/: convert_sounds.py
src/: bagman.cpp  meson.build
src/amiga/: amiga.68k
src/backend/sdl/: ImageUtil.cpp
src/core/: Abortable.cpp  Abortable.hpp  Cross.cpp  Cross.hpp  GsTime.cpp  MyString.cpp
src/engine/: AnimatedSprite.cpp  AnimatedSprite.hpp  DirectoryBase.cpp  GameContext.cpp  GameContext.hpp  GfxFrame.hpp  GfxObjectLayer.cpp  MPLevel.cpp  MenuScreen.cpp  PlayerControls.cpp  PlayerControls.hpp  SoundSet.cpp  SoundSet.hpp  TileGrid.cpp
src/gfx/: DisplayDepth.hpp  ImageFrame.cpp  ImageFrame.hpp  ScaleSize.hpp
src/platform/: Abortable.hpp  Cross.cpp  ImageUtil.hpp  MemoryEntryMap.hpp  MyAssert.cpp  MyFile.cpp  MyMacros.hpp  MyString.cpp  RandomNumber.cpp  SoundPlay.cpp  SoundPlay.hpp
tools/: create_amiga_archive.py
